force-app/main/default/objects/EYI_VP_VC__c/EYI_VP_VC__c.object-meta.xml
<CustomObject>
    <label>VP/VC</label>
    <nameField>
        <displayFormat>VP/VC - {00000}</displayFormat>
        <label>VP/VC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VP/VC</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>