force-app/main/default/objects/EYI_VP_VC__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget (Delete)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>