force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Budget__c.field-meta.xml
<CustomField>
    <fullName>EYI_Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Budget</valueSetName>
    </valueSet>
</CustomField>