force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Client_Name__c</fullName>
    <label>Client Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>