force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Designation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Designation__c</fullName>
    <label>Designation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>