force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Linkdin_URL__c.field-meta.xml
<CustomField>
    <fullName>EYI_Linkdin_URL__c</fullName>
    <label>Linkdin URL</label>
    <type>Url</type>
</CustomField>