force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_No_show_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_No_show_Date__c</fullName>
    <formula>IF(
   ISPICKVAL(EYI_Status__c, &apos;No Show&apos;),
   TODAY() + 1,
   NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No show Date</label>
    <type>Date</type>
</CustomField>