force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_No_Show_Status_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_No_Show_Status_Time__c</fullName>
    <label>No Show Status Time</label>
    <type>DateTime</type>
</CustomField>