force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Profile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Profile__c</fullName>
    <label>Digital Footprint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>