force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>VP/VC</relationshipLabel>
    <relationshipName>VP_VC</relationshipName>
    <type>Lookup</type>
</CustomField>