force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>VP/VCs</relationshipLabel>
    <relationshipName>Sitevisits</relationshipName>
    <type>Lookup</type>
</CustomField>