force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_REC_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Code__c</fullName>
    <label>REC Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>