force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_REC_Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Primary_Number__c</fullName>
    <formula>EYI_REC_Account__r.EYI_Primary_Mob_No_with_Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REC Primary Number</label>
    <type>Text</type>
</CustomField>