force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Status__c</fullName>
    <label>Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit Proposed</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>