force-app/main/default/objects/EYI_VP_VC__c/fields/EYI_Visit_Proposed_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visit_Proposed_Date__c</fullName>
    <label>Visit Proposed Date</label>
    <type>DateTime</type>
</CustomField>