force-app/main/default/objects/EYI_VP_VC__c/fields/No_Show_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Date_Time__c</fullName>
    <formula>IF(
    ISPICKVAL(EYI_Status__c, &apos;No Show&apos;),
    DATETIMEVALUE(TEXT(TODAY()) &amp; &quot; 2:05:00 PM&quot;),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Show Date Time</label>
    <type>DateTime</type>
</CustomField>