force-app/main/default/objects/EYI_VP_VC__c/validationRules/Visit_Confirm_Date_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Confirm_Date_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( EYI_Status__c , &apos;Visit Confirmed&apos;) ,  ISNULL(  EYI_Visit_Confirmed_Date__c ),EYI_IsAutomationBypassed__c = false)</errorConditionFormula>
    <errorDisplayField>EYI_Visit_Confirmed_Date__c</errorDisplayField>
    <errorMessage>Please enter the visit confirmation date.</errorMessage>
</ValidationRule>