force-app/main/default/objects/EYI_VP_VC__c/validationRules/Visit_Date_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date_is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( EYI_Status__c , &apos;Visit Proposed&apos;) ,  ISNULL( EYI_Visit_Proposed_Date__c ),EYI_IsAutomationBypassed__c = false )</errorConditionFormula>
    <errorDisplayField>EYI_Visit_Proposed_Date__c</errorDisplayField>
    <errorMessage>Please enter the proposed visit date.</errorMessage>
</ValidationRule>