force-app/main/default/objects/EYI_VP_VC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Client_Name__c</columns>
    <columns>EYI_REC_Account__c</columns>
    <columns>EYI_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>